Changed verbage on index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Monkey Memes</title>
+    <title>Caitlin Tibbetts</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,8 @@
   <body>
     <center>
       <h1>Welcome to Caitlin Tibbetts' GitHub webpage.</h1>
-      <p>I use this webpage as a domain to host externally-facing documents such as my resume, so if you are seeing this page by mistake, please recheck the link sent to you.</p>
+      <p>I use this webpage as a domain to host externally-facing documents such as my <a href="Resume.pdf">resume</a>, so if you are seeing this page by mistake, please recheck the link sent to you.</p>
+      <p>My portfolio is a work-in-progress, please check back again soon for more information on my experience and personal projects.</p>
       <p>Thank you, and have a great day!</p>
     </center>
   </body>
