--- a/party.html
+++ b/party.html
@@ -66,8 +66,8 @@
                         </tr>
                         <tr>
                             <td>05.29 at 2PM</td>
-                            <td><strong>Intern buddies!</strong><br/>Lunch shenanigans</td>
-                            <td>Chime</td>
+                            <td><strong>CanSQUADa</strong><br/>Lunch shenanigans, mark your work calendars!</td>
+                            <td><a href="caitlintibbetts.daily.co/hello">caitlintibbetts.daily.co/hello</a></td>
                         </tr>
                         <tr>
                             <td></td>
