--- a/party.html
+++ b/party.html
@@ -107,7 +107,7 @@
                         <tr>
                             <td>9PM-11PM</td>
                             <td><strong>ACM Peeps</strong><br/>Will I make y'all do karaoke? It's possible. JK...unless?</td>
-                            <td>ACM Discord</td>
+                            <td><a href="caitlintibbetts.daily.co/hello">caitlintibbetts.daily.co/hello</a> then we can maybe move to the Discord</td>
                         </tr>
                       </table>
 				</div>
