Make title bold

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         class="banner onload-image-fade-in onload-content-fade-right style3 fullscreen content-align-left image-position-center orient-left color2"
       >
         <div class="content">
-          <h1>Welcome to my corner.</h1>
+		<h1><strong>Welcome to my corner.</strong></h1>
           <p class="major">
             My name is Caitlin Tibbetts, and I am a senior Computer Science
             major at the University of Texas at Dallas.
