Added marketing to objective

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p>
             I will be pursuing my Master's in Computer Science with an emphasis
             on Intelligent Systems, and I am looking for Summer of 2021
-            internships in Machine Learning and Artifical Intelligence fields.
+            internships in Machine Learning, particularly related to marketing.
             <br />
             <br />
             I am passionate about encouraging and empowering young women to
