--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                 ><span class="label">LinkedIn</span></a
               >
             </li>
+		  <li>
+			  <a href="https://dev.to/caitlintibbetts" class="icon style2 fa-dev">
+  <span class="label">DEV</span></a
+              >
+            </li>
             <li>
               <a href="https://twitter.com/cait_tibbetts" class="icon brands style2 fa-twitter"
                 ><span class="label">Twitter</span></a
