--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               >
             </li>
 		  <li>
-			  <a href="https://dev.to/caitlintibbetts" class="icon style2 fab fa-dev">
+			  <a href="https://dev.to/caitlintibbetts" class="icon fab fa-dev">
   <span class="label">DEV</span></a
               >
             </li>
