--- a/party.html
+++ b/party.html
@@ -28,7 +28,7 @@
         class="banner onload-image-fade-in onload-content-fade-right style3 fullscreen content-align-left image-position-center orient-left color2"
       >
         <div class="content">
-            <h1>You're Invited!</h1>
+            <h1>You (and your friends) are Invited!</h1>
             <h2>Caitlin's 21st Birthday Party</h2>
             <p>When: May 28th @ 7 PM <br/>
             Where: My Apartment, 3000 Northside Blvd #1337 <br/>
