--- a/party.html
+++ b/party.html
@@ -35,7 +35,8 @@
             This party will <strong>not</strong> be COVID-safe, so you must be fully vaccinated to attend. Please bring a <strong>copy</strong> of your vaccine card for a <i>fun activity</i>. <br/>
             Bring anyone you want, but they also have to be fully vaccinated and bring their vaccine card. In fact, please phone tree this out, I'm just one person :p <br/>
             If you feel so inclined, feel free to bring your favorite booze (and snacks) for the group, but if not, no worries, just Venmo <i>@Caitlin-Tibbetts-1</i> $5 for alcohol! <br/>
-            <strong>See you soon for the first event of the post-COVID world!</strong>
+            No gifts please! <br/>
+            <strong>See you soon for the first event of the post-COVID world! Check back here often for updates...</strong>
             </p>
         </div>
       </section>
