--- a/party.html
+++ b/party.html
@@ -32,6 +32,7 @@
             <h2>Caitlin's 21st Birthday Party</h2>
             <p>When: May 28th @ 8 PM <br/>
             Where: My Apartment, 3000 Northside Blvd #1337 <br/>
+            Dress code: Cute, comfy, and danceable <br/>
             This party will <strong>not</strong> be COVID-safe, so you must be fully vaccinated to attend. Please bring a <strong>copy</strong> of your vaccine card for a <i>fun activity</i>. <br/>
             Bring anyone you want, but they also have to be fully vaccinated and bring their vaccine card. In fact, please phone tree this out, I'm just one person :p <br/>
             If you feel so inclined, feel free to bring your favorite booze (and snacks) for the group, but if not, no worries, just Venmo <i>@Caitlin-Tibbetts-1</i> $5 for alcohol! <br/>
