Mardi gras party WOO

--- a/mardigras2024.html
+++ b/mardigras2024.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Halloween 2023</title>
+    <title>Mardi Gras 2024</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -22,19 +22,19 @@
       >
         <div class="content">
             <h1>You are Invited!</h1>
-            <h2>Spiders, Ravens, and Bats, Oh My! <i class="icon solid fa-ghost"></i></h2>
-            <p><strong>When:</strong> October 21st @ 9 PM <br/>
+            <h2>Masquerade!  Paper faces on Parade.<i class="icon solid fa-masks-theater"></i></h2>
+            <p><strong>When:</strong> February 2nd @ 9 PM CST<br/>
             <strong>Where:</strong> My Apartment, 11400 Domain Dr. #5402, Austin, TX, 78758 <br/>
-            <strong>Dress code:</strong> COSTUMES!!! <br/>
-            Ever wanted to see where creepy creatures go at night when they're done ruining people's days? Come to the spookiest party of the Halloween season! We'll have frights, tricks, and enough treats (alcohol) to weather it all. Costumes are required! If you dress up like yourself, I reserve the right to make fun of you.<br/>
+            <strong>Dress code:</strong> Festive in Purple, Green, and Gold <br/>
+            Ready for the last hurrah before hunkering down for Lent? Not Catholic but just like to party? Come over for a nice, Cajun good time! Wear your masks, wear your purple, green, and cold, and see what you can get thrown your way ;)<br/>
             <br/>
-            <strong>Directions:</strong> park in the Pink garage. Once you park, make your way to 2A. You'll find an elevator, walk past that and out onto the street. Straight ahead, you'll find my courtyard. The code to get in that door and the next one is *1200. Take a left past the mailboxes, take the elevator to the fourth floor, and then take a left and keep walking until you find my apartment! The code to get in the door is 143349.<br/>
+            <strong>Directions:</strong> park in the Pink garage. Once you park, make your way to 2A. You'll find an elevator, walk past that and out onto the street. Straight ahead, you'll find my courtyard. The code to get in that door and the next one is *1200. Take a left past the mailboxes, take the elevator to the fourth floor, and then take a left and keep walking until you find my apartment! The code to get in the door is 801624.<br/>
             </p>
             <h1>FAQ</h1>
             <ol>
               <li><em>Can I bring friends?</em> Yes, please! But if you bring lots of friends, consider bringing some extra drinks to offset! If any of your friends have already been blocklisted from my parties, please do not bring them.</li>
               <li><em>Will you be providing food?</em> It's important to eat while drinking, so yes, we will have some snacks and desserts! I recommend eating a meal before coming.</li>
-              <li><em>What's your policy on sleepovers?</em> I have a zero-tolerance policy against drinking and driving (one way to get on the blocklist), so if you need a safe place to stay, I will always provide, no questions asked. That being said, please be aware that if 20 people need to stay over, the accommodations won't be very comfy, so try to have a safe ride plan. There will be a special surprise for the Designated Drivers of the group!</li>
+              <li><em>What's your policy on sleepovers?</em> I have a zero-tolerance policy against drinking and driving (one way to get on the blocklist), so if you need a safe place to stay, I will always provide, no questions asked. That being said, please be aware that if 20 people need to stay over, the accommodations won't be very comfy, so try to have a safe ride plan.</li>
               <li><em>What are your other zero-tolerance rules?</em> #1 Harrassment. I love when people meet each other through my parties, it's a big reason that I throw them, but consent is non-negotiable, and comfort should always be a top-priority. If you feel like someone is/was being inappropriate, feel free to let me know, and I'll handle the situation. #2 Disrespect. Like I mentioned, this is not an event space, so I expect everyone to be respectful of my neighbors out in the hallway when coming and going. If the neighbors have a problem with my parties, I can't throw them! #3 Just generally being an ass, don't do that.</li>
               <li><em>What is your blocklist?</em> I've thrown quite a few parties over the years, and there are a few people that have broken my zero tolerance rules and were asked not to come back. They should know.</li>
             </ol>
@@ -61,7 +61,7 @@
               >
             </li>
             <li>
-              <a href="mailto:caitlin.tibbetts@utdallas.edu" class="icon style2 fa-envelope"
+              <a href="mailto:caitlin@tibbettsfamily.com" class="icon style2 fa-envelope"
                 ><span class="label">Email</span></a
               >
             </li>
