Mardi gras party typo

--- a/mardigras2024.html
+++ b/mardigras2024.html
@@ -26,7 +26,7 @@
             <p><strong>When:</strong> February 2nd @ 9 PM CST<br/>
             <strong>Where:</strong> My Apartment, 11400 Domain Dr. #5402, Austin, TX, 78758 <br/>
             <strong>Dress code:</strong> Festive in Purple, Green, and Gold <br/>
-            Ready for the last hurrah before hunkering down for Lent? Not Catholic but just like to party? Come over for a nice, Cajun good time! Wear your masks, wear your purple, green, and cold, and see what you can get thrown your way ;)<br/>
+            Ready for the last hurrah before hunkering down for Lent? Not Catholic but just like to party? Come over for a nice, Cajun good time! Wear your masks, wear your purple, green, and gold, and see what you can get thrown your way ;)<br/>
             <br/>
             <strong>Directions:</strong> park in the Pink garage. Once you park, make your way to 2A. You'll find an elevator, walk past that and out onto the street. Straight ahead, you'll find my courtyard. The code to get in that door and the next one is *1200. Take a left past the mailboxes, take the elevator to the fourth floor, and then take a left and keep walking until you find my apartment! The code to get in the door is 801624.<br/>
             </p>
