--- a/birthday2024.html
+++ b/birthday2024.html
@@ -18,7 +18,7 @@
     <div id="wrapper" class="divided">
       <!-- Banner -->
       <section
-        class="banner onload-image-fade-in onload-content-fade-right style3 fullscreen content-align-left image-position-center orient-left color8"
+        class="banner onload-image-fade-in onload-content-fade-right style3 fullscreen content-align-left image-position-center orient-left aquamarine"
       >
         <div class="content">
             <h1>You are Invited!</h1>
