Update the directions to my apartment

--- a/birthday2024.html
+++ b/birthday2024.html
@@ -28,7 +28,7 @@
             <strong>Dress code:</strong> think pirates, boats, Hawaiian shirts, and swimsuits <br/>
             Caitlin's turning 24 on the high seas (figuratively speaking), and you won't asking where the rum went! I would be honored if you would join me to ring in my 24th year on Earth with a bash fit for a pirate. We'll be shaking our booties and raising the main sail all night, so come through whenever! In lieu of gifts, I'd rather attendees make a donation to the <a href="https://www.centraltexasfoodbank.org/">Central Texas Food Bank</a>; the summer is the hardest time of the year for a lot of these families, especially those relying on school lunches. Let's make a difference!<br/>
             <br/>
-            <strong>Directions:</strong> park in the Pink garage. Once you park, make your way to 2A. You'll find an elevator, walk past that and out onto the street. Straight ahead, you'll find my courtyard. The code to get in that door and the next one is *1200. Take a left past the mailboxes, take the elevator to the fourth floor, and then take a left and keep walking until you find my apartment!<br/>
+            <strong>Directions:</strong> park in the Pink garage. Once you park, make your way to 2A. You'll find an elevator with a leasing office sign next to it, walk past that and out onto the street. Straight ahead, you'll find my courtyard. The code to get in that door and the next one is *1200. Take a left past the mailboxes, take the elevator to the fourth floor, and then take a left and keep walking until you find my apartment!<br/>
             </p>
             <h1>FAQ</h1>
             <ol>
