Update directions to apartment for shotluck

--- a/shotluck2024.html
+++ b/shotluck2024.html
@@ -28,7 +28,7 @@
             <strong>Dress code:</strong> Match with your shot :p<br/>
             Each person brings a shot for the group to try, the weirder the better! There are 13 people invited at the moment. To lower waste, I suggest that if you own shot glasses, please bring them! I'll also have some and some disposable ones as well. Mocktail shots are allowed as well! Just get creative!<br/>
             <br/>
-            <strong>Directions:</strong> park in the Pink garage. Once you park, make your way to 2A. You'll find an elevator, walk past that and out onto the street. Straight ahead, you'll find my courtyard. The code to get in that door and the next one is *1200. Take a left past the mailboxes, take the elevator to the fourth floor, and then take a left and keep walking until you find my apartment!<br/>
+            <strong>Directions:</strong> park in the Pink garage. Once you park, make your way to 2A. You'll find an elevator with a leasing office sign next to it, walk past that and out onto the street. Straight ahead, you'll find my courtyard. The code to get in that door and the next one is *1200. Take a left past the mailboxes, take the elevator to the fourth floor, and then take a left and keep walking until you find my apartment!<br/>
             </p>
             <h1>FAQ</h1>
             <ol>
